--- a/WebApplication2/appsettings.json
+++ b/WebApplication2/appsettings.json
@@ -9,5 +9,9 @@
     "ConnectionStrings": {
         "pos_restoConnectionString": "Data Source=.\\SQLEXPRESS01;Initial Catalog=pos_resto;Integrated Security=True;TrustServerCertificate=True;"
 
+    },
+    "AppSettings": {
+        "Secret": "Ini adalah secret key yang digunakan di JWT token, anda dapat membuat key secara bebas"
     }
+
 }
